--- a/app/views/scanning/index.html.erb
+++ b/app/views/scanning/index.html.erb
@@ -1,4 +1,4 @@
- Hi this is a test
  <div>
- 	<input type="file" accept="image/*" capture="camera">
+	 <label style="width: 800px; font-size: 1em"> Scan the Photo </label>
+ 	<input type="file" accept="image/*" capture="camera" style="width: 800px; font-size: 1em">
  </div>
