--- a/app/views/scanning/index.html.erb
+++ b/app/views/scanning/index.html.erb
@@ -1,5 +1,6 @@
  <div>
-	 <label style="width: 800px; font-size: 1em"> Scan the Photo </label>
+
+<label style="width: 80%; font-size: 1em"> Scan the Photo </label>
 <%=form_tag("/scanning", multipart:true) do %>
   <input type="file" id="upload_datafile" name="upload[datafile]" accept="image/*" capture> <p/>
   <input type="submit" value="Upload">
