camera changed to thumbnail

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,15 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  
+  <style>
+	.thumbnail {
+	    float: left;
+	    width: 110px;
+	    height: 90px;
+	    margin: 5px;
+	}
+  </style>		
 </head>
 <body>
 
