--- a/app/views/scanning/index.html.erb
+++ b/app/views/scanning/index.html.erb
@@ -12,7 +12,7 @@
 		        		<div ng-repeat="item in items">
 						  <div class="col-xs-6 col-md-3"  ng-click="clicked(item)" >
 						    <div class="thumbnail" >	
-						      <img src="assets/images/11.jpg" ng-src="assets/images/{{item}}">
+						      <img src="assets/images/camera.png" ng-src="assets/images/{{item}}" style="-webkit-transform: rotate(90deg);">
 						    </div>
 						  </div>
 						</div>  
