--- a/app/assets/javascripts/controller/fitting_room/fitting_room.js.erb
+++ b/app/assets/javascripts/controller/fitting_room/fitting_room.js.erb
@@ -1,4 +1,4 @@
-fitting.controller('FittingRoomCtrl', ['$scope', '$http',  '$location', '$filter', '$modal', '$q', function ($scope, $http,  $location, $filter, $modal, $q) {
+fitting.controller('FittingRoomCtrl', ['$scope', '$http',  '$location', '$filter', '$modal','$interval', '$q', function ($scope, $http,  $location, $filter, $modal, $interval, $q) {
 
     $scope.last_status = 'Created';
     $scope.lastitem = {};
@@ -42,5 +42,8 @@ fitting.controller('FittingRoomCtrl', ['$scope', '$http',  '$location', '$filter
 
     };
 
-    $scope.reload();
+
+    $interval(function(){
+		 $scope.reload();
+	},1000);
 }]);
