--- a/app/assets/javascripts/controller/fitting_room/fitting_room.js.erb
+++ b/app/assets/javascripts/controller/fitting_room/fitting_room.js.erb
@@ -28,7 +28,10 @@ fitting.controller('FittingRoomCtrl', ['$scope', '$http',  '$location', '$filter
    }
 	
    $scope.clicked  =  function(clicked_photo){
+   	
+   	if $scope.clicked_photo == nil {
        $scope.clicked_photo = clicked_photo;
+      } 
    }
 	
 
