--- a/app/assets/javascripts/controller/fitting_room/fitting_room.js.erb
+++ b/app/assets/javascripts/controller/fitting_room/fitting_room.js.erb
@@ -23,6 +23,7 @@ fitting.controller('FittingRoomCtrl', ['$scope', '$http',  '$location', '$filter
     }
     
    var url = '/scanning.json?barcode=' + $scope.rooom_barcode
+   console.log($location.search().barcode)
 
    var reload_modal_close =  function(){
        $scope.reload();
