--- a/app/views/scanning/index.html.erb
+++ b/app/views/scanning/index.html.erb
@@ -7,7 +7,7 @@
 		        	<div id="biggerImage" class="card" style="width: 100%; height: 60%;"> 
 		        		<div style="width:80%; height:100%; float: left">
 		        			<span >
-		        				<img ng-src="assets/images/{{clicked_photo}}"  style="width:460px; max-width:460px; height: 400px; max-height: 400px; -webkit-transform: rotate(90deg)" >
+		        				<img ng-src="assets/images/{{clicked_photo}}"  style="margin:10px;  width:460px; max-width:460px; height: 460px; max-height: 460px; -webkit-transform: rotate(90deg)" >
 		        			</span>
 		        		</div> 
 		        		
